fixed layout for event on mobile screen

--- a/css/styles.css
+++ b/css/styles.css
@@ -600,6 +600,8 @@ pre code {
   width: 100%;
   padding-right: 0.75rem;
   padding-left: 0.75rem;
+  margin-right: 0.75rem;
+  margin-left: 0.75rem;
 }
 
 .col {
